# anki-deck-progress

./: README.md  __init__.py  manifest.json  pyproject.toml
docs/: example.html  processed.html
